media/benmeller-screen.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* end of reset */

/* Style buttons */
.btn {
	background-color: white;
	border: none;
	color: rgb(255, 30, 199);
	padding: 12px 30px;
	cursor: pointer;
	font-size: 20px;
	font-family: Cabin,sans-serif;

  }
  
  /* Darker background on mouse-over */
  .btn:hover {
	background-color: rgb(255, 30, 199);
	color: white; 
  }

body {
	font: normal normal 400;
	font-size: 100%;
	line-height: 1.6em;
	/*also written as...  font: normal normal 400 100%/1.5em;*/
	font-family: Cabin,sans-serif;
	margin: 1em 20%;
	min-width: 15em;
}

p {
	position: relative;
	margin-bottom: 1.2em;
	font-family: Cabin,sans-serif;
	margin-right: 0;
	width: 82%;
    font-weight: 300;
	font-size: 1.2em;
    color: #535150;
}

b, strong {
    color: #000;
}

code {
	font: normal normal;
	font-size: 90%;
	/*line-height: 1em;*/
	font-family: Cabin,sans-serif;
	color: rgb(112, 112, 112);
}

p code {
	position: absolute;
	text-align: right;
	right: -20%;
}


ul {
	position: relative;
	width: 82%;
	margin-bottom: 1.5em;
	margin-top: -1em;
	font-size: 1.2em;
	font-weight: 300;
	font-family: Cabin,sans-serif;
	color: #535150;
	padding-left: 5;

}

/*uncomment to get dashes in the list*/
li:before {
	content: "•";
	position: relative;
	left: -0.25em;
}

li {
	/*second line indent*/
	padding-left: 1.25em;
	
	/* text-indent: -1.25em; */
	/*color: #777;*/
}

li ul {
	position: relative;
	left: 0;
	width: 82%;
	margin-top: 0.25em;
}

h1,h2,h3,h4 {
	font-weight: 400;
	font-family: Cabin,Bold;
	width: 82%;
    /*text-transform: uppercase;*/
}

h1 {
	text-align: left;
	/*font-size: 3em;*/
	font-size: 285%;
	line-height: 1.1em;
    letter-spacing: 3px;
	position: relative;
    font-weight: 700;
}

h1+p {
	/*subtitle*/
	font-style: italic;
	font-size: 110%;
}

h2 {
	/*font-size: 1.4em;*/
	margin-top: 2em;
	position: relative;
    font-weight: 500;
    margin-bottom: 1.4em;
	line-height: 1.6em;
	font-size: 1.6em;
}

/* Add black bar under H2 */
h2::before {
    content: '';
    position: absolute;
    left: 0;
    top: 120%; /*was 1.2em*/
    height: 15px;
    width: 65px;
    border-top: 5px solid black;
}

h3 {
	/*font-size: 1.4em;*/
	font-size: 140%;
	line-height: 2.2em;
	position: relative;
    font-weight: 400;
}

a {
	color: inherit;
	text-decoration:none
}

a:hover {
	color:#39f
}

div#webaddress > p {
    text-transform: uppercase;
} 

em {
	/* font-weight: bold; */
	font-style: italic;
}

strong {
	font-weight: bold;
}

#address {
	display: none;
}

hr {
	border-top: 0.5px solid rgb(66, 66, 66);
}

/* Profile image at top. Insert image before H1 */
img {
    position: absolute;
    right: -22%;
    height: 7.5em;
    border-radius: 50%;
}

/* --- Flexbox --- */
.container {
    display: flex;
    align-items: stretch;
    flex-direction: row;
    flex-wrap: wrap;
	column-gap: 10%;
	justify-content: space-between;
}

div.item {
    flex-basis: 200px;
}

div#pubs {
	flex-grow: 1;
	width: 82%;
	text-align: left;
}

div.item > * {
    text-align: left;
	width: 100%;
}

div.item > h2 {
    margin-top: 1em;
}

div#profile {
    flex-grow: 7;
	width: 100%;
}

div#webaddress {
    flex-grow: 1;
}

div#webaddress > p {
    text-transform: uppercase;
	width: 100%;
}

div#pubs > h2 {
	margin-top: 2em;
	position: relative;
    font-weight: 500;
    margin-bottom: 1.4em;
	line-height: 1.6em;
	font-size: 1.6em;
}


/* Responsive */
/* Large screens ----------- */
@media only screen 
and (min-width : 1824px) {
	body {
		margin: 1em 25%;
	}
}

/* Smaller screens - e.g. iPad and below */
@media screen and (max-width: 1024px) {
	body {
		margin: 1em 5%;
	}
}

/* Mobile */
@media screen and (max-width: 480px) {
	h1 {
		font-size: 2em;
	}

	h2 {
		font-size: 2em;
	}

	p {
		width: 70%;
	}

	p code {
		right: -40%;
	}

	.item:first-child {
		flex-basis: 100%;
	}
	
	img {
		height: 5em;
		right: -34%;
	}
}

.printOnly{
	display: none;
}

.PDF{ 
	color: rgb(255, 30, 199);
}

@media print {
	#printPageButton {
	  display: none;
	}

	#printOnly {

		display: none;
	}
}

